# icar

./: .gitignore  BUG_README.md  Makefile  fpm.toml  install.sh
.github/scripts/: icar_install_utils.sh
app/: main.f90
docs/: compiling.md  settings_documentation.md
docs/ctestfile/: CMakeLists.txt  icar_options.nml
docs/howto/: icar_parcel.md
helpers/: README.md  aggregate_parallel_files.py  environment.yml  fix_icar_time.py  gen_bc.py  gen_ideal.py  gen_init.py  gen_init_ideal.py  requirements.txt
helpers/ccsm/: config.py
helpers/cluster_CI/: Makefile  cheyenne_gcm_test.sh
helpers/cmip/: io_routines.py
helpers/erai/: config.py
helpers/genNetCDF/: Forcing.py  ICARoptions.py  Topography.py
helpers/generateTestFiles/: Forcing.py  ICARoptions.py  Topography.py
helpers/wrf/: ideal2icar.py  wind_compare.py  wrf_vars.py
run/: complete_icar_options.nml  short_icar_options.nml
scripts/: README.md  build-icar.sh  clean-test-on-cori.sh  compile-on-cori.sh  export-cori-environment-variables.sh  fpm-test.sh  load-modules-on-cori.sh  retest-on-cori.sh
src/: crayEnv.sh  icar_m.f90  icar_s.f90  makefile
src/constants/: icar_constants.f90
src/io/: default_output_metadata.f90  io_routines.f90  lt_lut_io.f90  output_h.f90  output_obj.f90
src/main/: driver.f90  init.f90  time_step.f90
src/objects/: boundary_obj.f90  domain_h.f90  domain_obj.f90  exchangeable_h.f90  exchangeable_obj.f90  grid_obj.f90  opt_types.f90  options_h.f90  options_obj.f90  parcel.f90  parcel_interface.f90  parcel_interfaces.f90  parcel_type.f90  variable_h.f90  variable_obj.f90
src/physics/: adv_mpdata.f90  cu_driver.f90  cu_parcel.f90  linear_winds.f90  lsm_driver.f90  mp_thompson.f90  ra_clWRF_support.f90  water_simple.f90  wind.f90
src/tests/ctests/: CMakeLists.txt  README.org  coarray_gather_grid_test.f90  coarray_gather_index_test.f90  coarray_scatter_grid_test.f90  coarray_scatter_index_test.f90  hello.f90  test_lt_parameters_namelist.f90
src/utilities/: array_utilities.f90  co_utilities.f90  foo_writer_mod.f90
stubs/: README.md
test/: array_utilities_test.f90  check.py  main.f90  string_test.f90
test/integration/: colorado-benchmark-thompson.f90
test/unit/: main.f90  variable_dict_test.f90
tests/: Makefile  gen_basic_ideal_test.py  gen_ideal_advection_test.py  gen_ideal_test.py  gen_linear_iterative_winds_test.py  gen_parcel_test.py  gen_schaer_ideal_test.py  makefile
